@@ -48,6 +48,7 @@ import com.badlogic.gdx.tests.extensions.FreeTypeMetricsTest;
 import com.badlogic.gdx.tests.extensions.FreeTypePackTest;
 import com.badlogic.gdx.tests.extensions.FreeTypeTest;
 import com.badlogic.gdx.tests.extensions.InternationalFontsTest;
+import com.badlogic.gdx.tests.files.ZipFileHandleResolverTest;
 import com.badlogic.gdx.tests.g3d.Animation3DTest;
 import com.badlogic.gdx.tests.g3d.AnisotropyTest;
 import com.badlogic.gdx.tests.g3d.Basic3DSceneTest;
@@ -299,7 +300,8 @@ public class GdxTests {
 		PngTest.class,
 		JsonTest.class,
 		QuadTreeFloatTest.class,
-		QuadTreeFloatNearestTest.class
+		QuadTreeFloatNearestTest.class,
+		ZipFileHandleResolverTest.class
 		// @on
 
 	// SoundTouchTest.class, Mpg123Test.class, WavTest.class, FreeTypeTest.class,
